--- a/build.xml
+++ b/build.xml
@@ -2,7 +2,7 @@
 <project name="livescript-idea" default="all">
   
   
-  <property file="build.properties.sample"/>
+  <property file="build.properties"/>
   <!-- Uncomment the following property if no tests compilation is needed -->
   <!-- 
   <property name="skip.tests" value="true"/>
@@ -56,6 +56,7 @@
     <include name="**/?*.dtd"/>
     <include name="**/?*.tld"/>
     <include name="**/?*.ftl"/>
+    <include name="**/*.ft"/>
   </patternset>
   
   <!-- JDK definitions -->
