--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -3,7 +3,33 @@
     <name>LiveScriptIdea</name>
     <description>Plugin for LiveScript language support</description>
     <version>0.1.4</version>
-    <vendor logo="/org/livescriptidea/images/livescript.png" url="https://github.com/racklin/livescript-idea">Rack Lin</vendor>
+    <vendor email="racklin@gmail.com" logo="/org/livescriptidea/images/livescript.png" url="https://github.com/racklin/livescript-idea">Rack Lin</vendor>
+    <description>
+        <![CDATA[
+        <p>LiveScriptIdea is a plugin for your [JetBrains](http://www.jetbrains.com) IDE to develop your LiveScript.</p>
+        <p>Support Products: IntelliJ IDEA, RubyMine, WebStorm, PhpStorm, PyCharm, AppCode, Android Studio</p>
+        <ul>
+          <li>Syntax highlighting with a color settings preference pane</li>
+          <li>Commenting and uncommenting of line and block comments</li>
+          <li>Highlighting of matching braces</li>
+          <li>LiveScript File / Class Templates</li>
+          <li>Code Style with a Code Style settings preference pane</li>
+        </ul>
+        ]]>
+    </description>
+    <change-notes>
+        <![CDATA[
+        <h3>0.1.4 changes:</h3>
+            <ul>
+                <li>[feature]Add CodeStyle with a Code Style settings preference pane</li>
+            </ul>
+        <h3>0.1.3 changes:</h3>
+            <ul>
+                <li>[feature]LiveScript File / Class Templates</li>
+                <li>[bugfix]Fixes some lexer statements<li>
+            </ul>
+        ]]>
+    </change-notes>
     <idea-version since-build="9000"/>
     <depends>com.intellij.modules.xml</depends>
 
