--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -19,6 +19,10 @@
     </description>
     <change-notes>
         <![CDATA[
+        <h3>0.1.6 changes:</h3>
+            <ul>
+                <li>[feature]Add Preview Compiled LiveScript File</li>
+            </ul>
         <h3>0.1.5 changes:</h3>
             <ul>
                 <li>[feature]Add <<< <<<< import super let export var from keywords</li>
@@ -48,6 +52,10 @@
     </project-components>
 
     <actions>
+        <action id="CompileLiveScript" class="org.livescriptidea.actions.CompileLiveScriptAction" text="Preview Compiled LiveScript File...">
+            <add-to-group group-id="EditorPopupMenu" anchor="last" />
+            <add-to-group group-id="ProjectViewPopupMenu" anchor="last" />
+        </action>
         <action id="NewLiveScriptFile" class="org.livescriptidea.actions.CreateLiveScriptFileAction">
             <add-to-group group-id="NewGroup" anchor="before" relative-to-action="NewFromTemplate"/>
         </action>
